java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting7/ClassLiteral.java
import java.lang.reflect.*;

class Example {
    private void demo() {
        <error descr="Cannot resolve symbol 'TypeVariable'">TypeVariable</error><Class<? extends Example>>[]  typeParameters  =  getClass().getTypeParameters();
    }
}
